# agent-trace-triage

./: .gitignore  BACKLOG.md  CLAUDE.md  PPT骨架-一个Feature的上线之旅.md  README.md  Trace Agent Graph _standalone_.html  一个Feature的上线之旅.pptx
backend/: app.py  llm_skill.py  main.py  models.py  pyproject.toml  router.py  rules.yaml  rules_v2.yaml  trace_parser.py  triage_engine.py
backend/routes/: __init__.py  samples.py  settings.py  sops.py  triage.py
backend/sample_traces/: 4_10_cascade_truncation.json  4_11_cumulative_timeout.json  4_12_mcp_no_retry.json  4_13_tool_loop.json  4_14_content_filter.json  4_15_model_bad_tool_params.json  4_16_agent_timeout_short.json  4_17_swallowed_error.json  4_18_rate_limit.json  4_19_three_layer_chain.json  4_1_model_timeout.json  4_20_semantic_error.json  4_2_model_bad_output.json  4_3_mcp_connection.json  4_4_mcp_tool_error.json  4_5_skill_not_found.json  4_6_skill_execute_error.json  4_7_agent_stuck.json  4_8_agent_retry_exhausted.json  4_9_upstream_bad_params.json  5_10_mixed_tool_types.json  5_1_multi_layer_error.json  5_3_partial_batch_failure.json  5_6_conflicting_signals.json  5_7_retry_exhausted_unclear.json  5_8_user_approval_cascade.json  c10_mixed_error_types.json  c2_atypical_error_message.json  c3_semantic_error.json  c4_partial_success_concurrent.json  c5_user_timeout_chain.json  c6_model_hallucination_chain.json  c7_config_timeout_short.json  c9_rate_limit_stacking.json
backend/sample_traces_v2/: 4_10_cascade_truncation.json  4_11_cumulative_timeout.json  4_12_mcp_no_retry.json  4_16_agent_timeout_short.json  (+6 more)
(+145 files in other folders)
